--- a/index.html
+++ b/index.html
@@ -10,25 +10,58 @@
   </head>
   <body>
 
+    <nav>
+      <div class="nav-wrapper teal lighten-1">
+        <a href="#" class="brand-logo left">ChurchTools Facts Reporter</a>
+        <ul id="nav-mobile" class="right">
+          <li id="logout-button-wrapper"><a id="logout-button">logout<i class="material-icons right">exit_to_app</i></a></li>
+          <!--
+          <li><a href="sass.html">Sass</a></li>
+          <li><a href="badges.html">Components</a></li>
+          <li><a href="collapsible.html">JavaScript</a></li>
+          -->
+        </ul>
+      </div>
+    </nav>
+
     <div class="container">
 
-      <div class="row">
+      <div class="row" id="login-container">
 
-        <h4>1. Login</h4>
+        <h4>Login</h4>
 
         <input type="url" id="login-host" placeholder="xyz.church.tools"></input>
         <input type="text" id="login-user" placeholder="username"></input>
         <input type="password" id="login-pwd" placeholder="password"></input>
 
-        <button class="btn waves-effect waves-light btn-small" id="login-submit-button" type="submit" name="action">Submit
-          <i class="material-icons right">send</i>
-        </button>
+        <div class="row login-row">
+
+          <div class="col s6">
+            <button class="btn waves-effect waves-light btn-small" id="login-submit-button" type="submit" name="action">Submit
+              <i class="material-icons right">send</i>
+            </button>
+          </div>
+
+          <div class="col s6">
+            <div class="switch right">
+              <label>
+
+                <input type="checkbox" id="login-store-switch">
+                <span class="lever"></span>
+                save password
+              </label>
+            </div>
+          </div>
+
+        </div>
+
+
 
       </div>
 
-      <div class="row">
+      <div class="row" id="edit-container">
 
-        <h4>2. Choose an event and report your facts</h4>
+        <h4>Report your facts</h4>
 
         <div class="col s6">
 
@@ -38,11 +71,27 @@
 
         <div class="col s6">
 
-          <ul class="collection" id="facts-list"></ul>
+          <div id="facts-list-wrapper">
+            <ul class="collection" id="facts-list"></ul>
+          </div>
 
           <button class="btn waves-effect waves-light btn-small" id="submit-facts" type="submit" name="action">Report
             <i class="material-icons right">send</i>
           </button>
+
+          <div id="load-facts-icon">
+            <div class="preloader-wrapper small active">
+              <div class="spinner-layer spinner-green-only">
+                <div class="circle-clipper left">
+                  <div class="circle"></div>
+                </div><div class="gap-patch">
+                <div class="circle"></div>
+              </div><div class="circle-clipper right">
+                <div class="circle"></div>
+              </div>
+              </div>
+            </div>
+          </div>
 
         </div>
 
