Update style, add icons

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 
     <nav>
       <div class="nav-wrapper teal lighten-1">
-        <a href="#" class="brand-logo left">ChurchTools Facts Reporter</a>
+        <a href="#" class="brand-logo left">
+          <img id="logo-monochrome" src="assets/icons/monochrome/monochrome.png" />ChurchTools Facts Reporter
+        </a>
         <ul id="nav-mobile" class="right">
-          <li id="logout-button-wrapper"><a id="logout-button">logout<i class="material-icons right">exit_to_app</i></a></li>
+          <li id="logout-button-wrapper"><a id="logout-button">Logout<i class="material-icons right">exit_to_app</i></a></li>
           <!--
           <li><a href="sass.html">Sass</a></li>
           <li><a href="badges.html">Components</a></li>
