--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   </head>
   <body>
 
+    <div id="logout-container" >
+      <div id="logout" class="teal lighten-1">
+        <h3>Logged out</h3>
+      </div>
+    </div>
+
     <nav>
       <div class="nav-wrapper teal lighten-1">
         <a href="#" class="brand-logo left">
