Moved Materialize to npm package

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="style-src 'unsafe-inline' 'self'; default-src 'self';">
     <title>ChurchTools Facts Reporter</title>
-    <link rel="stylesheet" type="text/css" href="style/materialize/css/materialize.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="style/materialize/font/font.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="node_modules/materialize-css/dist/css/materialize.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="style/fonts/materialize-font.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="style/style.css" media="screen" />
   </head>
   <body>
@@ -23,11 +23,6 @@
         </a>
         <ul id="nav-mobile" class="right">
           <li id="logout-button-wrapper"><a id="logout-button">Logout<i class="material-icons right">exit_to_app</i></a></li>
-          <!--
-          <li><a href="sass.html">Sass</a></li>
-          <li><a href="badges.html">Components</a></li>
-          <li><a href="collapsible.html">JavaScript</a></li>
-          -->
         </ul>
       </div>
     </nav>
@@ -108,6 +103,6 @@
     </div>
 
     <script type="text/javascript" src="./renderer.js"></script>
-    <script type="text/javascript" src="./style/materialize/js/materialize.js"></script>
+    <script type="text/javascript" src="node_modules/materialize-css/dist/js/materialize.js"></script>
   </body>
 </html>
