--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <nav>
       <div class="nav-wrapper teal lighten-1">
-        <a href="#" class="brand-logo left">
+        <a href="#" class="brand-logo left open-github">
           <img id="logo-monochrome" src="assets/icons/monochrome/monochrome.png" />ChurchTools Facts Reporter
         </a>
         <ul id="nav-mobile" class="right">
@@ -101,6 +101,7 @@
       </div>
 
     </div>
+
 
     <script type="text/javascript" src="./renderer.js"></script>
     <script type="text/javascript" src="node_modules/materialize-css/dist/js/materialize.js"></script>
